<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">VSB</string>
    <string name="app_name_long">Virtual Swipe Button</string>
    <string name="text_github">Visit project on Github</string>
    <string name="text_help">VSB will put a semi transparent virtuel button at the bottom of your screen. It will be there
        at anytime, even when the keyboard is open. So be careful when typing.
    </string>

    <string name="text_about">
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
    file except in compliance with the License. You may obtain a copy of the License at:
    http://www.apache.org/licenses/LICENSE-2.0&lt;br>

    Unless required by applicable law or agreed to in writing, software distributed under
    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
    either express or implied. See the License for the specific language governing permissions and
    limitations under the License.&lt;br>&lt;br>

        &lt;i>This app is a strongly modified version of the great app \"VirtualSoftKeys\" developed from \"erttyy8821\".
    It is also licensed under the Apache License. You can find the source code on Github:
    https://github.com/erttyy8821/VirtualSoftKeys&lt;/i></string>

    <string name="text_settings">
        Here you can configure the gestures and the size of VSB. You can also make the button invisible and hide the
        launcher icon of VSB. To apply changes you have to restart the service.</string>
    <string name="app_deviceManager">This is needed to lock the screen.</string>


    <!--UI-->

    <string name="butt_size">Button size</string>
    <string name="butt_click">Click</string>
    <string name="butt_clickLong">Long click</string>
    <string name="butt_clickDouble">Double click</string>
    <string name="butt_left">Swipe left</string>
    <string name="butt_right">Swipe right</string>
    <string name="butt_top">Swipe top</string>
    <string name="butt_show">Show button</string>
    <string name="butt_restart">Restart service</string>
    <string name="title_settings">Settings</string>


    <!--Actions-->

    <string name="action_home">Home</string>
    <string name="action_back">Back</string>
    <string name="action_recents">Recents</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_quickSettings">Quick settings</string>
    <string name="action_power">Power menu</string>
    <string name="action_screen">Lock screen</string>
    <string name="action_volume">Volume</string>
    <string name="action_nothing">Nothing</string>



    <!--Permission Dialog-->

    <string name="Permission_draw_overlays_title">1. Draw over other Apps</string>
    <string name="Permission_draw_overlays_content">In order for app to work properly you need to allow the permissions
        to draw over other apps (Settings > Apps > Advanced > Draw over other apps).</string>
    <string name="Permission_accessibility_title">2. Accessibility service</string>
    <string name="Permission_accessibility_content">And then enable the Accessibility service (Settings > Accessibility >
        VSB).</string>
    <string name="Permission_goto_page">Go to Settings</string>
    <string name="Permission_allow_system_alert_first">Please allow draw over apps permission</string>
    <string name="Permission_allowed">Permission Granted</string>
    <string name="Permission_allow_system_alert_first_and_restart_service">Please allow this permission first, and select
        VSB in accessibility</string>
    <string name="Toast_allow_system_alert_first">Please allow draw over apps permission first</string>


    <!--Accessibility setting-->
    <string name="action_settings">Turn VSB\'s service on or off, if you do not do this you cannot use the app.</string>


    <!--Remove Launcher Dialog-->
    <string name="remove_launcher">Hide icon</string>
    <string name="remove_launcher_message">The application icon will be removed from the system\'s applications list.
        In order to restore the icon, please uninstall and reinstall the app.</string>


    <string-array name="high" tools:ignore="MissingTranslation">
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
    </string-array>

    <string-array name="click" tools:ignore="MissingTranslation">
        <item>@string/action_home</item>
        <item>@string/action_back</item>
        <item>@string/action_recents</item>
        <item>@string/action_notifications</item>
        <item>@string/action_quickSettings</item>
        <item>@string/action_power</item>
        <item>@string/action_screen</item>
        <item>@string/action_volume</item>
        <item>@string/action_nothing</item>
    </string-array>

</resources>
