<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:typeface="sans"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:text="@string/Permission_draw_overlays_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Permission_draw_overlays_content" />

            <Button
                android:id="@+id/But_intent_system_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Permission_goto_page"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:typeface="sans"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Permission_accessibility_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Permission_accessibility_content" />

            <Button
                android:id="@+id/But_intent_accessibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/Permission_allow_system_alert_first"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
